# nomake-build

./: .gitignore  ChangeLog  Changelog.md  LICENSE  Makefile  Makefile.am  NomakeScript.ns  README.md  configure.ac  executablemove.bat  language_standart.md  setup.py
VSProj/: VSProj.sln  VSProj.vcxproj  VSProj.vcxproj.filters
VSProj/Release/VSProj.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VSProj.lastbuildstate
docs/: README.md  mkdocs.yml
docs/docs/: index.md  reference.md
docs/docs/install/: install.md
docs/docs/install/args/: compilerlink.md  debug.md  index.md
docs/en/: index.md
docs/en/NomakeBuild/BuildSystem/: arch.md  debug-prints.md  debug.md  linker.md
docs/en/docs/: index.md
docs/ru/: index.md  mkdocs.yml
docs/ru/NomakeBuild/BuildSystem/: arch.md  cxx.md
docs/ru/docs/: index.md
scripts/: README.md  baseobj.py  checkobj.py  compileobj.py  funcsobj.py  main.py  moduleobj.py
scripts/pytools/: data_cmd.py
scripts/universalfunctions/: main.py
src/: .in  Makefile.am  NApp.cpp  NApp.h  README.md  main.cpp  print.cpp  print.h
src/Api/: Makefile.am  debug.cpp  debug.h  error.h  settings.h  types.h
src/Preprocessor/: comments.cpp  comments.h  fdescriptor.cpp  fdescriptor.h
src/Sys/: Makefile.am  Stack.h  color.cpp  color.h  debug.cpp  no_color.cpp  sys.cpp  sys.h  types.h  unix.cpp  win32.cpp
src/Tools/: Makefile.am  lexer.cpp  lexer.h  parser.cpp  preprocessor.cpp  preprocessor.h  tools.h
src/Tools/Preprocessor/: Makefile.am  comments.cpp  comments.h  fdescriptor.cpp  fdescriptor.h
(+9 files in other folders)
